--- a/src/assets/transitions.css
+++ b/src/assets/transitions.css
@@ -25,32 +25,39 @@
 
 /* FADE IN SIMPLE */
 
-.fade-in-enter-from {
+.fade-in-enter-from,
+.fade-in-z-enter-from {
   opacity: 0;
 }
-.fade-in-enter-to {
+.fade-in-enter-to,
+.fade-in-z-enter-to {
   opacity: 1;
 }
-.fade-in-enter-active {
+.fade-in-enter-active,
+.fade-in-z-enter-active {
   transition: all 0.3s ease-out;
-  /* z-index: 110; */
 }
 
-.fade-in-leave-from {
+.fade-in-leave-from,
+.fade-in-z-leave-from {
   opacity: 1;
 }
-.fade-in-leave-to {
+.fade-in-leave-to,
+.fade-in-z-leave-to {
   opacity: 0;
 }
-.fade-in-leave-active {
+.fade-in-leave-active,
+.fade-in-z-leave-active {
   transition: all 0.3s ease-out;
   position: absolute;
   width: 100%;
-  /* z-index: 110; */
 }
-.fade-in-move {
+.fade-in-move,
+.fade-in-z-move {
   transition: transform 0.5s ease;
 }
+
+.fade-in-z-enter-active, .fade-in-z-leave-active { z-index: 110; }
 
 /* ROTATE IN-OUT */
 .rotate-enter-from {
