--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,6 +7,7 @@ html {
   --green: #00b894;
 
   --vip-gold: #fbc531;
+  --yellow: #fdcb6e;
 
   --off-white-main: #f5f6fa;
   --off-white: var(--off-white);
@@ -14,6 +15,7 @@ html {
   --bg-color-main: #2f3640;
   --bg-color: var(--bg-color-main);
   --bg-color-secondary: #353b48;
+  --bg-color-darker: #21252c;
 
   --gk-font-color: #f5f6fa;
 }
@@ -61,6 +63,9 @@ p, button, a, li, h4, h5, h6 {
 }
 p {
   line-height: 1.33;
+}
+.title {
+  font-family: 'DM Serif Display', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .no-select {
